--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">SK</span>Tech</div>
+                <div class="firstline"><span class="color">Sree Kanna</span>Tech</div>
                 <div class="secondline">
                 We'r 
                 <span class="txt-rotate color bold-text" data-period="1200" data-rotate='[ "Designers.", "Innovators.", "Engineers.", "Freelancers.", "Machine Learning Specialists.", "Embedded Engineers." ]'></span>
@@ -352,7 +352,7 @@
                     </div>
             <!--services header-->
                     <div class="services-heading wow">
-                        <span class="color">My</span> Services
+                        <span class="color">Our</span> Services
                     </div>
             <!--services header end-->
             <!--services content-->
