--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">SK<span style="color: white;">Tech</span></span>
+            <span class="color">Sree Kanna <span style="color: white;">Tech</span></span>
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -235,7 +235,7 @@
                 <div class="firstline"><span class="color">Sree Kanna</span> Tech</div>
                 <div class="secondline">
                 We'r 
-                <span class="txt-rotate color bold-text" data-period="1200" data-rotate='[ "Designers.", "Innovators.", "Engineers.", "Freelancers.", "Machine Learning Specialists.", "Embedded Engineers." ]'></span>
+                <span class="txt-rotate color bold-text" data-period="1200" data-rotate='[ "Designers", "Innovators", "Engineers", "Freelancers", "Machine Learning Specialists", "Embedded Engineers" ]'></span>
                 <span class="slash">|</span>
             </div>
             <div class="contact">
