--- a/index.html
+++ b/index.html
@@ -223,10 +223,11 @@
                 <a href="https://www.instagram.com/sreekannatech/" target="_blank">
                     <i class="fab fa-instagram social-media"></i>
                 </a>
-                <!-- LinkedIn -->
-                <a href="https://www.linkedin.com/in/rajashekhar-kanukuntla/" target="_blank">
-                    <i class="fab fa-linkedin social-media"></i>
+		<!-- Phone icon with Bootstrap icon -->
+                <a href="tel:9581654845" target="_blank">
+                    <i class="bi bi-telephone-fill contactpic"></i>
                 </a>
+
             </div>
 
             <!--Social Media Links end-->
@@ -243,9 +244,9 @@
                 <a href="mailto:sreekannatech@gmail.com">
                     <i class="bi bi-envelope-fill contactpic"></i>
                 </a>
-                <!-- Phone icon with Bootstrap icon -->
-                <a href="tel:9581654845">
-                    <i class="bi bi-telephone-fill contactpic"></i>
+
+	        <a href="https://www.linkedin.com/in/rajashekhar-kanukuntla/">
+    			<i class="fab fa-linkedin social-media"></i>
                 </a>
             </div>
         
