--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
                 <a href="https://wa.me/9581654845?text=Hi%20SKTech!" target="_blank">
                     <i class="fab fa-whatsapp social-media whatsapp-logo"></i>
                 </a>
+                <!-- Instagram -->
                 <a href="https://www.instagram.com/sreekannatech/" target="_blank">
                     <i class="fab fa-instagram social-media"></i>
                 </a>
-		<!-- Phone icon with Bootstrap icon -->
+                <!-- Phone icon with Font Awesome -->
                 <a href="tel:9581654845" target="_blank">
-                    <i class="bi bi-telephone-fill contactpic"></i>
+                    <i class="fas fa-phone-alt social-media"></i> <!-- Using Font Awesome phone icon -->
                 </a>
-
             </div>
-
+            
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
@@ -246,7 +246,7 @@
                 </a>
 
 	        <a href="https://www.linkedin.com/in/rajashekhar-kanukuntla/">
-    			<i class="fab fa-linkedin social-media"></i>
+    			<i class="fab fa-linkedin contactpic"></i>
                 </a>
             </div>
         
