--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Sree Kanna <span style="color: white;">Tech</span></span>
+            <span class="color">SK<span style="color: white;">Tech</span></span>
         </div>
     <!--loader-end-->
     <!--link-screen-->
