--- a/index.html
+++ b/index.html
@@ -163,78 +163,78 @@
             }
         }
 
-	.visitor-message {
-	    position: fixed;
-	    bottom: 20px;
-	    left: 50%; /* Center horizontally */
-	    transform: translateX(-50%); /* Ensure proper centering */
-	    color: white;
-	    padding: 20px 30px;
-	    border-radius: 8px;
-	    font-size: 20px;
-	    text-align: center;
-	    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-	    animation: fadeInUp 1s ease-out, pulse 1.5s infinite;
-	    z-index: 9999; /* Ensure it stays above other elements */
-	    max-width: 80%; /* Prevent overflow on smaller screens */
-	}
-	
-	@media (max-width: 768px) {
-	    .visitor-message {
-	        left: 25%;
-	        bottom: 10%; /* Position it slightly higher for mobile */
-	        font-size: 16px; /* Reduce font size */
-	        padding: 15px 20px; /* Adjust padding */
-	        max-width: 90%; /* Allow for more space on small screens */
-	    }
-	}
-	
-	/* Styling for the highlighted visitor count */
-	.visitor-count {
-	    font-size: 30px;
-	    font-weight: bold;
-	    color: #ff6347;
-	    text-shadow: 2px 2px 10px rgba(255, 99, 71, 0.7);
-	    animation: bounce 1s infinite;
-	}
-	
-	/* Fade-in animation for the message */
-	@keyframes fadeInUp {
-	    0% {
-	        opacity: 0;
-	        transform: translateY(30px);
-	    }
-	    100% {
-	        opacity: 1;
-	        transform: translateY(0);
-	    }
-	}
-	
-	/* Bounce effect for the visitor count */
-	@keyframes bounce {
-	    0% {
-	        transform: scale(1);
-	    }
-	    50% {
-	        transform: scale(1.2);
-	    }
-	    100% {
-	        transform: scale(1);
-	    }
-	}
-	
-	/* Pulse effect for the entire visitor message box */
-	@keyframes pulse {
-	    0% {
-	        transform: scale(1);
-	    }
-	    50% {
-	        transform: scale(1.05); /* Subtle enlargement */
-	    }
-	    100% {
-	        transform: scale(1);
-	    }
-	}
+.visitor-message {
+            position: fixed;
+            bottom: 20px;
+            left: 80%;
+            transform: translateX(-50%); /* Centering horizontally */
+            color: white;
+            padding: 20px 30px;
+            border-radius: 8px;
+            font-size: 20px;
+            text-align: center; /* Centering the text inside the box */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            animation: fadeInUp 1s ease-out, pulse 1.5s infinite;
+        }
+
+        @media (max-width: 768px) {
+            .visitor-message {
+                left: 25%;  /* Center horizontally */
+                transform: translateX(-50%); /* Adjust the transform to keep it centered */
+                bottom: 5%; /* Keep the message positioned 10% from the bottom */
+                max-width: 90%;  /* Set a max-width to avoid the message becoming too wide */
+                font-size: 16px;  /* Slightly reduce font size for mobile */
+            }
+        }
+
+
+        /* Adding animation to highlight the visitor count */
+        .visitor-count {
+            font-size: 30px;
+            font-weight: bold;
+            color: #ff6347;
+            text-shadow: 2px 2px 10px rgba(255, 99, 71, 0.7);
+            animation: bounce 1s infinite;
+        }
+        
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Animation for visitor count */
+        @keyframes bounce {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.2);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        /* Pulse effect */
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+
 
 
 
